<resources>
    <string name="app_name">inodream_wallet_03</string>

    <string name="google_name">Google</string>
    <string name="login">LOGIN</string>

    <string name="login_description_01">Implement Life to suit NFT’s items purchased from NFTs and provide points.</string>
    <string name="login_description_02">The more you practice voluntary carbon reduction in your daily life, the more points you provide, the more NFTs you can purchase with points pints can be swapped to tokens at any time, and the swapped tokens are sold on the exchange to eam retum on investment</string>

    <string name="logo">LOGO</string>

    <string name="sign_up">회원가입</string>
    <string name="sign_up_caution">회원가입 전, XXX의 약관들을 확인해주세요.</string>

    <string name="term_mandatory">필수</string>
    <string name="term_optional">선택</string>
    <string name="term_error_tip">계약서를 읽고 동의하십시오.</string>

    <string name="term_agreement_all">약관 전체동의</string>
    <string name="term_service">서비스 이용약관</string>
    <string name="term_privacy_policy">개인정보 수집 및 이용동의</string>
    <string name="term_location_policy">위치정보서비스 이용약관</string>
    <string name="term_advertise_alarm_policy">E-mail 및 SMS 광고성 정보 수신동의</string>
    <string name="term_advertise_description">프로모션 및 이벤트 소식을 제공합니다.</string>

    <string name="confirm">확인</string>
    <string name="cancel">취소</string>

    <string name="title_term_service">서비스 이용약관</string>
    <string name="title_term_privacy_policy">개인정보 수집 및 이용동의</string>
    <string name="title_term_location_policy">위치정보서비스 이용약관</string>
    <string name="title_term_advertise_alarm_policy">광고성 정보 수신동의</string>
    <string name="title_token_receive">토큰 받기</string>
    <string name="title_token_send">토큰 보내기</string>
    <string name="title_token_transact_history">토큰 거래 이력</string>
    <string name="title_nft_token_transact_history">NFT 토큰 거래 이력</string>
    <string name="title_nft_import">NFT 불러오기</string>
    <string name="title_nft_detail">NFT 상세보기</string>
    <string name="title_nft_send">NFT 보내기</string>
    <string name="title_token_lockup">토큰 락업</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="token">토큰</string>
    <string name="nft">NFT</string>

    <string name="token_add">토큰 추가</string>
    <string name="token_receive">토큰 받기</string>
    <string name="nft_add">NFT 불러오기</string>
    <string name="add_symbol">+</string>
    <string name="token_transact_history">토큰 거래 이력</string>
    <string name="nft_receive">NFT 받기</string>
    <string name="nft_refresh">새로 고침</string>
    <string name="nft_history">NFT 거래 내역</string>

    <string name="balance_my_assets">나의 자산</string>

    <string name="receive">받기</string>
    <string name="send">보내기</string>
    <string name="swap">스왑</string>
    <string name="setting">설정</string>
    <string name="transaction_history">거래이력</string>

    <string name="my_address">내 주소</string>
    <string name="token_receive_caution_01">-입금 진행 시 동일한 메인넷만 지원합니다.</string>
    <string name="token_receive_caution_02">-ETH(이더리움) 네트워크만 입출금이 가능합니다.</string>
    <string name="token_receive_caution_03">-사용자가 입력을 잘못한 경우 서비스 제공자는 책임을 지지 않습니다.</string>

    <string name="close">닫기</string>

    <string name="token_send_caution_01">○○○지갑에서는</string>
    <string name="token_send_caution_02">이더리움 네트워크</string>
    <string name="token_send_caution_03">만을 지원</string>
    <string name="token_send_caution_04">합니다.</string>

    <string name="transact_password">출금 비밀번호</string>
    <string name="transact_password_confirm">출금 비밀번호 확인</string>
    <string name="transact_password_register">출금 비밀번호 등록</string>

    <string name="transact_password_caution_01">-비밀번호는 총 6자리 숫자, 특수문자조합 입력하세요.</string>
    <string name="transact_password_caution_02">-비밀번호 확인란에 동일한 비밀번호를 입력하세요.</string>

    <string name="address_eng">Address</string>
    <string name="quantity">수량</string>
    <string name="send_request">출금 신청</string>
    <string name="input_max"><u>최대입력</u></string>
    <string name="swap_comment">현재의 토큰은 <font fgcolor='#7056f0'>유니스왑</font>에서 인증을 확인하실 수 있습니다.</string>

    <string name="there_is_no_menu">메뉴가 존재하지 않습니다.</string>

    <string name="service_being_prepared">서비스 준비 중 입니다.</string>

    <string name="tx_receive">받기</string>
    <string name="tx_send">보내기</string>
    <string name="tx_complete"> 완료</string>
    <string name="tx_progress"> 진행중</string>
    <string name="tx_create"> 창조하다</string>
    <string name="tx_confirm"> 확인하다</string>

    <string name="check_error_empty_address">수신 주소를 입력해 주세요.</string>
    <string name="check_error_empty_quantity">수량을 입력해 주세요.</string>
    <string name="check_error_empty_pwd">비밀번호를 입력해 주세요.</string>
    <string name="check_error_empty_symbol">토큰 선택하세요.</string>
    <string name="check_error_empty_amount">수량을 입력해 주세요.</string>
    <string name="check_error_amount">입력한 수량은 보유 수량보다 클 수 없습니다.</string>
    <string name="check_error_amount_few">ETH 잔액을 확인하십시오. 가스 요금을 지불하기에 충분하지 않을 수 있습니다.</string>
    <string name="check_pwd_length_error">암호가 충족되지 않음.</string>
    <string name="check_pwd_inconsistency_error">비밀번호가 두 번 일치하지 않습니다.</string>
    <string name="success_set_pwd">암호 설정 성공.</string>

    <string name="W_value">￦%1$s</string>
    <string name="W_swap_value">￦ : %1$s</string>

    <string name="title_configure_title">설정</string>

    <string name="account_manage">계정 관리</string>
    <string name="set_wallet_init">Google Logout</string>
    <string name="set_withdrawal_password">출금 비밀번호 초기화</string>
    <string name="set_withdrawal_password_init_message">"출금 비밀번호를 초기화합니다.
        비밀번호 초기화 후
        토큰 또는 NFT 전송 요청 시
        새로운 출금 비밀번호를
        입력하시면 됩니다."</string>
    <string name="set_withdrawal_password_init_message3">인증번호를 아래에 입력하세요.</string>
    <string name="set_withdrawal_password_init_message4">"인증코드 요청 시
        현재 로그인 된 구글 메일로
        임의로 생성된 인증번호를 전송합니다.
        메일이 수신에 문제가 있는 경우
        `fonwalletsender@gmail.com`
        로 문의 주세요."</string>
    <string name="request_credential_error_message">%1$d 초 후 다시 요청해주세요.</string>
    <string name="input_credential_data">인증번호 입력</string>
    <string name="init_confirm">초기화 요청</string>
    <string name="request_credential_data">인증코드 요청</string>
    <string name="policy_and_term">정책 및 약관</string>
    <string name="wallet_version">앱 버전</string>

    <string name="wallet_init">Google Logout</string>
    <string name="wallet_init_message">현재 지갑에 인증된\nGoogle 정보를 로그아웃 합니다.</string>
    <string name="wallet_init_detail_message">"인증 정보가 해제된 후
        지갑 Google 인증 화면으로 이동합니다.\n
        로그아웃 후에도
        동일한 Google 계정으로 다시 인증 시
        본인이 소유한 모든 자산 정보를
        다시 관리할 수 있다."</string>
    <string name="wallet_init_confirm">Google Logout</string>

    <string name="token_send_failure_type_01">보유 자산 부족</string>
    <string name="token_send_failure_type_02">수수료 부족</string>

    <string name="token_send_failure_type_01_message">"현재 보유하고 있는 자산이
        전송하려는 토큰 총량보다
        부족하여 전송해 실패 하였습니다."</string>
    <string name="token_send_failure_type_02_message">"전송을 위한 수수료가
        부족하여 전송해 실패 하였습니다."</string>

    <string name="nft_account">지갑 : %1$s</string>
    <string name="nft_address">NFT 주소 : %1$s</string>
    <string name="nft_id">토큰 ID : %1$s</string>
    <string name="nft_balance">범위를 벗어남</string>
    <string name="nft_empty_editview">입력해 주세요</string>
    <string name="dialog_token_bottom_price">%1$s ETH \n￦%2$s </string>

    <string name="lockup_support_network">토큰 락업 기능은 이더리움 네트워크만 지원합니다.</string>

    <string name="lockup_event_my">락업 이벤트 정보</string>
    <string name="token_symbol_name_fon">FON</string>
    <string name="total_received_token">총 받은 토큰</string>
    <string name="total_locked_token">총 잠김 토큰</string>
    <string name="total_unlocked_token">총 해제 토큰</string>
    <string name="unlock_schedule">잠금해제 일정</string>
</resources>