<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.SocialLoginActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logo"
        android:textSize="50sp"
        android:fontFamily="@font/inter_medium"
        android:textColor="#000000"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/social_login_button"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/social_login_button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/ripple_social_button_round"
        android:gravity="center_vertical"
        android:clickable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        >
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/google_symbol"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:fontFamily="@font/inter_semi_bold"
            android:textColor="#000000"
            android:text="@string/google_name"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="13sp"
            android:fontFamily="@font/inter_regular"
            android:textColor="#000000"
            android:text="@string/login"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/login_descrption01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_description_01"
        android:textSize="12sp"
        android:fontFamily="@font/inter_medium"
        android:textColor="#000000"
        android:textAlignment="center"
        android:layout_marginTop="17dp"
        android:layout_marginHorizontal="33dp"
        app:layout_constraintTop_toBottomOf="@id/social_login_button"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_description_02"
        android:textSize="12sp"
        android:fontFamily="@font/inter_light"
        android:textColor="#6a6a6a"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/login_descrption01"
        app:layout_constraintLeft_toLeftOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>