<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9ff"
    tools:context=".activitys.SendTransactPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/top_toolbar"
            layout="@layout/normal_top_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="28dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/inter_medium"
                android:letterSpacing="-0.01"
                android:text="@string/transact_password"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_pwd_1"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_white_round_empty"
                android:inputType="textPassword"
                android:maxLength="6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter_medium"
                android:letterSpacing="-0.01"
                android:text="@string/transact_password_confirm"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />
t
            <EditText
                android:id="@+id/et_pwd_2"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_white_round_empty"
                android:inputType="textPassword"
                android:maxLength="6" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_light"
                    android:text="@string/transact_password_caution_01"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_light"
                    android:text="@string/transact_password_caution_02"
                    android:textSize="10sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="0dp"
                android:layout_height="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="21dp"
                android:gravity="center">


                <TextView
                    android:id="@+id/password_register_button"
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/receive_round_bu2_ripple"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/transact_password_register"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>