<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/receive_round_gray"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#000000"
                android:letterSpacing="-0.01"
                android:lineSpacingExtra="7sp"
                android:textStyle="bold"
                android:text="@string/my_address"
                android:layout_marginTop="30dp"
                android:paddingHorizontal="20dp"
                android:textAlignment="center"
                />

            <ImageView
                android:layout_width="166dp"
                android:layout_height="166dp"
                android:src="@drawable/qr_img"
                android:layout_marginTop="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="39dp"
                android:layout_marginHorizontal="20dp"
                android:paddingHorizontal="15dp"
                android:background="@drawable/receive2_ripple_round"
                android:clickable="true">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="#7c7c7c"
                    android:gravity="center_horizontal"
                    android:text="0x21ceFHwehlkhe5789bsjdbgsbjkknsdg86986gsdguojdgjasd898698knKJGKJG8"
                    android:layout_weight="1"
                    android:layout_marginRight="14dp"/>

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:src="@drawable/copy"/>

            </LinearLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="14dp"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/token_receive_caution_01"
                    android:textSize="10sp"
                    android:fontFamily="@font/inter_light"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/token_receive_caution_02"
                    android:textSize="10sp"
                    android:fontFamily="@font/inter_light"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/token_receive_caution_03"
                    android:textSize="10sp"
                    android:fontFamily="@font/inter_light"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="21dp">

                <TextView
                    android:id="@+id/close_button"
                    android:layout_width="152dp"
                    android:layout_height="50dp"
                    android:background="@drawable/receive_round_bu2_ripple"
                    android:text="@string/close"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:layout_marginLeft="10dp"
                    android:clickable="true"
                    />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"
                />
        </LinearLayout>

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>