<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/receive_round_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingHorizontal="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="30dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:letterSpacing="-0.01"
                        android:text="@string/set_withdrawal_password"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="21dp"
                        android:background="@drawable/round_gray"
                        android:gravity="center_horizontal|top|left"
                        android:orientation="horizontal"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="15dp">


                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/set_withdrawal_password_init_message4"
                            android:textAlignment="center"
                            android:textColor="#8e8e8e"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/requestCredentialBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/send2_round_next_bu_ripple">

                        <TextView
                            android:id="@+id/requestCredentialText"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:clickable="true"
                            android:gravity="center"
                            android:letterSpacing="-0.01"
                            android:text="@string/request_credential_data"
                            android:textColor="#ffffff"
                            android:textSize="13sp"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/requestValidatorTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:height="50dp"
                            android:fontFamily="@font/inter_semi_bold"
                            android:gravity="center"
                            android:text="50초"
                            android:textColor="#FF0040"
                            android:textSize="20sp"
                            android:visibility="invisible"
                            app:layout_constraintStart_toEndOf="@id/requestCredentialText"
                            tools:ignore="MissingConstraints"></TextView>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/inter_medium"
                        android:letterSpacing="-0.01"
                        android:text="@string/set_withdrawal_password_init_message3"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_balance"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/shape_white_round_empty"
                        android:hint="@string/input_credential_data"
                        android:inputType="number|numberDecimal" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/initBtn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/receive_round_or_ripple"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/bx_message_error" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:letterSpacing="-0.01"
                        android:text="@string/init_confirm"
                        android:textColor="#ff73aa"
                        android:textSize="13sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>